fix: Hover hints issue when added bg to container & also when column gap is 0

--- a/src/common-editor.scss
+++ b/src/common-editor.scss
@@ -56,10 +56,15 @@
 /* Gutenberg Editor border hover */
 .edit-post-visual-editor .block-editor-block-list__layout {
 
-	.block-editor-block-list__block:hover,
+	.block-editor-block-list__block:hover::after,
 	.block-editor-block-list__block:not([contenteditable]):focus::after {
 		box-shadow: 0 0 0 1px #007cba;
 		border-radius: 2px;
+		z-index: 3;
+	}
+	.block-editor-block-list__block:not([contenteditable]):focus::after
+	{
+		z-index: 999;
 	}
 }
 
